www/src/scss/_layout.scss
body {
  display: flex;
  min-height: 100vh;
  height: 100vh;
  color: $text-color;
  background: $nav-background;
}

#___gatsby {
  display: flex;
  flex: 1 0 0;
}

#gatsby-focus-wrapper {
  display: flex;
  flex-direction: row;
  flex: 1 0 0;
}

.sidebar {
  flex: 0 0 240px;
  display: flex;
  flex-direction: column;

  .header {
    flex: 0 0 auto;
    background: $secondary;
    color: $secondary-text;
    text-align: center;
    padding: 16px 0;
    border-bottom: 8px solid $secondary-accent;

    .logo {
      height: 120px;
      width: 120px;
      display: inline-flex;
      justify-content: center;
      align-items: center;
      border-radius: 8px;
      overflow: hidden;

      > img {
        width: 100%;
      }
    }
  }

  .nav {
    flex: 1 1 100%;
    color: #2b2d42;
    padding: 5px 0;

    ol {
      list-style: none;
      margin: 0;

      li {
        margin: 0 0 4px 0;

        a {
          display: block;
          padding: 4px 16px;

          &:hover {
            text-decoration: none;
            color: $secondary-text;
            background: $secondary-accent;
          }
        }

        a.active {
          color: $primary-text;
          background: $primary-accent;
          border-right: 4px solid $primary;
        }
      }

      .sub-nav-list {
        li > a {
          padding-left: 28px;
        }
      }

      h2 {
        color: $secondary;
        margin: 0 16px 4px;
        @include relative-font-size(1);
      }
    }
  }

  .footer {
    flex: 0 0 auto;
    padding: 8px 16px;
    font-size: 11px;
  }
}

.content {
  box-shadow: 1px 0 5px rgba(0, 0, 0, .3);
  display: flex;
  flex-direction: column;
  flex: 1 1 100%;
  overflow: auto;
}

.content-inner {
  background: #fff;
  box-shadow: -1px 0 5px rgba(0, 0, 0, .3);
  flex: 1 1 100%;
  max-width: 740px;
}

// Page/Post layout.
.post {
  padding: 16px 32px;

  ul, ol {
    margin-left: 24px;
  }
  
  p, ul, ol {
    margin-bottom: 12px;
  }

  img {
    max-width: 100%;
    height: auto;
  }

  .post-content {
    line-height: 1.8;
    @include relative-font-size(1);
  }
}

